Full removed auth, sad day
